Fix hard to read scores

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -221,6 +221,9 @@ textarea
   border-color: black
   outline: none
 
+span.score
+  color: #d0d2d2 !important
+
   &:focus, &:active
     outline: none
     border-color: hsl(204, 33%, 68%)
